methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:7: error: ')' expected but ';' found.
    forward();brushUp();
             ^